<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgViewProductCardImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/txtProductDesc"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

    </ImageView>

    <TextView
        android:id="@+id/drink_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txtProductTitle"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProductCardImage" />

    <TextView
        android:id="@+id/textViewChooseSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TextViewChooseSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/drink_name" />

    <RadioGroup
        android:id="@+id/radioGroupSizes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseSize"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/radioButtonLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewSizeLarge" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/TextViewSizeMedium" />

        <RadioButton
            android:id="@+id/radioButtonSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/TextViewSizeSmall" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:text="@string/BtnTextAddToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSizes" />


</androidx.constraintlayout.widget.ConstraintLayout>